ingress/ingress_rules/host_based/httpd/httpd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx      
  rules:
  - host: "httpd.sreenidevops.tk"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: httpd-service
            port:
              number: 80
